# gdcm

./: .CMakeLists.txt.swp  .project  CMakeLists.txt  update.patch
Applications/Cxx/: CMakeLists.txt
CMake/: CMakeCSharpInformation.cmake  CMakeDetermineCSharpCompiler.cmake  CMakeTestCSharpCompiler.cmake  FindACTIVIZ.cmake  FindCSharp.cmake  FindDCMTK.cmake  FindDICOM3TOOLS.cmake  FindDotNETFrameworkSDK.cmake  FindLJPEG.cmake  FindMAGIC.cmake  FindMONO.cmake  FindMd5sum.cmake  FindOpenJPEG.cmake  FindOpenSSL2.cmake  FindPoppler.cmake  FindUUID.cmake  Toolchain-gcc-m32.cmake  Toolchain-gcc-powerpc.cmake  Toolchain-mingw32.cmake  UseCSharp.cmake  UseCSharpTest.cmake  UseCopyright.cmake  UseDebian.cmake  UseJavaTest.cmake  UseMONO.cmake  UsePythonTest.cmake  gdcmPlatformCxxTests.cmake
CMake/ExportConfiguration/: CMakeLists.txt  GDCMConfig.cmake.in  UseGDCM.cmake
Examples/: CMakeLists.txt
Examples/Csharp/: CMakeLists.txt
Examples/Cxx/: CMakeLists.txt
Examples/Java/: CMakeLists.txt
Source/: CMakeLists.txt
Source/Common/: CMakeLists.txt  gdcmConfigure.h.in  gdcmVersion.h  zipstreamimpl.h  zipstreamimpl.hpp
Source/DataDictionary/: CMakeLists.txt
Source/DataStructureAndEncodingDefinition/: CMakeLists.txt  gdcmByteValue.h  gdcmReader.cxx  gdcmWriter.cxx
Source/InformationObjectDefinition/: CMakeLists.txt
Source/MediaStorageAndFileFormat/: CMakeLists.txt
Testing/: CMakeLists.txt
Testing/Source/Common/Cxx/: CMakeLists.txt
Testing/Source/Common/Python/: CMakeLists.txt
Testing/Source/Data/: CMakeLists.txt
Testing/Source/DataDictionary/Cxx/: CMakeLists.txt
Testing/Source/DataDictionary/Python/: CMakeLists.txt
Testing/Source/DataStructureAndEncodingDefinition/Cxx/: CMakeLists.txt
Testing/Source/DataStructureAndEncodingDefinition/Python/: CMakeLists.txt
Testing/Source/InformationObjectDefinition/Cxx/: CMakeLists.txt
Testing/Source/InformationObjectDefinition/Python/: CMakeLists.txt
Testing/Source/MediaStorageAndFileFormat/: CMakeLists.txt
Testing/Source/MediaStorageAndFileFormat/Cxx/: CMakeLists.txt
Testing/Source/MediaStorageAndFileFormat/Python/: CMakeLists.txt
Utilities/: CMakeLists.txt
Utilities/C99/: CMakeLists.txt
Utilities/Insight/: CMakeLists.txt
Utilities/Insight/Testing/: CMakeLists.txt
Utilities/Release/: build_vtk52_gcc.cmake
Utilities/VTK/: CMakeLists.txt
Utilities/VTK/Applications/: CMakeLists.txt
Utilities/VTK/Examples/: CMakeLists.txt
Utilities/VTK/Examples/Csharp/: CMakeLists.txt
Utilities/VTK/Examples/Cxx/: CMakeLists.txt
Utilities/VTK/Examples/Java/: CMakeLists.txt
Utilities/VTK/Testing/: CMakeLists.txt
Utilities/VTK/Testing/Cxx/: CMakeLists.txt
Utilities/VTK/Testing/Python/: CMakeLists.txt
Utilities/doxygen/: CMakeLists.txt
Utilities/doxygen/vtk/: CMakeLists.txt
Utilities/gdcmcharls/: CMakeLists.txt
Utilities/gdcmexpat/: CMakeLists.txt
Utilities/gdcmexpat/lib/: CMakeLists.txt
Utilities/gdcmjpeg/: CMakeLists.txt
Utilities/gdcmjpeg/12/: CMakeLists.txt
Utilities/gdcmjpeg/16/: CMakeLists.txt
Utilities/gdcmjpeg/8/: CMakeLists.txt
Utilities/gdcmmd5/: CMakeLists.txt
Utilities/gdcmopenjpeg/: CMakeLists.txt
Utilities/gdcmopenjpeg/codec/: CMakeLists.txt
Utilities/gdcmopenjpeg/jpwl/decoder/jpwldec/: readme.txt
Utilities/gdcmopenjpeg/libopenjpeg/: CMakeLists.txt
Utilities/gdcmuuid/: CMakeLists.txt
Utilities/gdcmzlib/: CMakeLists.txt
Utilities/getopt/: CMakeLists.txt
Utilities/pvrg/: CMakeLists.txt
Utilities/wxWidgets/: CMakeLists.txt
Wrapping/: CMakeLists.txt
Wrapping/C/: CMakeLists.txt
Wrapping/Csharp/: CMakeLists.txt
Wrapping/Java/: CMakeLists.txt
Wrapping/PHP/: CMakeLists.txt
Wrapping/Python/: CMakeLists.txt
